Closed Bug 23484 Opened 26 years ago Closed 26 years ago

Problem with SELECT fields when selections have scroll bar

Categories

(Core :: Layout: Form Controls, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: rzach, Assigned: rods)

References

()

Details

(Whiteboard: Fix in my tree)

Attachments

(1 file)

When a select field has enough OPTIONs so that the drop-down selection menu is displayed with a scroll bar, and the field is positionied so that the drop-down will be displayed above the field, not below, then a. clicking in the field itself rather than on the down-arrow button will display the menu only as long as mouse button is pressed and b. clicking in the text are of the select field will cause a spurious selection. To reproduce: 1. Go to testcase 2. Position browser window so that drop-down on select field is displayed above the field. 3. Click in text area (where it says "other") Actual result: drop-down list is displayed only momentarily, and the selection changes from "other" to "21" Expected result: The drop-down should stay displayed until a selection is made or a click outside the list. The selection should not be changed from "other" unless another item was selected. 4. Click on down-arrow button to bring up drop-down list 5. Mouse-over the text field Actual result: the selection chanegs from "other" to "21" Expected reult: the selection should not change This happens in real life, e.g., in the OS select field in the Bugzilla bug entry form; I'll attach a test case. The spurious selections happen only when there are 21+ items in the list. Linux build 2000.01.08.08
Attached file testcase
Assignee: karnaze → rods
Reassigning to Rod.
Target Milestone: M14
setting milestone
Status: NEW → ASSIGNED
Whiteboard: Fix in my tree
happens on all platforms. This is an event handling issue. The problem is we need to know when we clicking in in the combobox or the listbox. Fix in my tree
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
fixed targeting of event.
Works on Linux build 2000.01.21.08. Mark verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: