Listbox was handle clicks in the combobox incorrectly and this caused the dropdown to rollup too soon. b=23484 r=kmcclusk