layout/forms/nsListControlFrame.cpp
@@ -2453,6 +2453,28 @@ nsListControlFrame::MouseUp(nsIDOMEvent* aMouseEvent)
   return NS_OK;
 }
 
+//---------------------------------------------------------
+// helper method
+PRBool nsListControlFrame::IsClickingInCombobox(nsIDOMEvent* aMouseEvent)
+{
+  // Cheesey way to figure out if we clicking in the ListBox portion
+  // or the Combobox portion
+  // Return TRUE if we are clicking in the combobox frame
+  if (mComboboxFrame) {
+    nsCOMPtr<nsIDOMMouseEvent> mouseEvent(do_QueryInterface(aMouseEvent));
+    PRInt32 scrX;
+    PRInt32 scrY;
+    mouseEvent->GetScreenX(&scrX);
+    mouseEvent->GetScreenY(&scrY);
+    nsRect rect;
+    mComboboxFrame->GetAbsoluteRect(&rect);
+    if (rect.Contains(scrX, scrY)) {
+      return PR_TRUE;
+    }
+  }
+  return PR_FALSE;
+}
+
 
 //----------------------------------------------------------------------
 // Sets the mSelectedIndex and mOldSelectedIndex from figuring out what 
@@ -2464,6 +2486,10 @@ nsListControlFrame::GetIndexFromDOMEvent(nsIDOMEvent* aMouseEvent,
                                          PRInt32&     aOldIndex, 
                                          PRInt32&     aCurIndex)
 {
+  if (IsClickingInCombobox(aMouseEvent)) {
+    return NS_ERROR_FAILURE;
+  }
+
   nsresult rv = NS_ERROR_FAILURE;
   nsIEventStateManager *stateManager;
   if (NS_OK == mPresContext->GetEventStateManager(&stateManager)) {
@@ -2480,7 +2506,6 @@ nsListControlFrame::GetIndexFromDOMEvent(nsIDOMEvent* aMouseEvent,
     }
     NS_RELEASE(stateManager);
   }
-
   return rv;
 }
 
@@ -2554,14 +2579,7 @@ nsListControlFrame::MouseDown(nsIDOMEvent* aMouseEvent)
         stateManager->GetEventTarget(&frame);
         nsCOMPtr<nsIListControlFrame> listFrame(do_QueryInterface(frame));
         if (listFrame) {
-          nsCOMPtr<nsIDOMMouseEvent> mouseEvent(do_QueryInterface(aMouseEvent));
-          PRInt32 scrX;
-          PRInt32 scrY;
-          mouseEvent->GetScreenX(&scrX);
-          mouseEvent->GetScreenY(&scrY);
-          nsRect rect;
-          mComboboxFrame->GetAbsoluteRect(&rect);
-          if (!rect.Contains(scrX, scrY)) {
+          if (!IsClickingInCombobox(aMouseEvent)) {
             return NS_OK;
           }
         }
